WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182859
REGRESSION (
r220112
): reCAPTCHA images render off screen on Twitch.tv app Log In or Sign Up
https://bugs.webkit.org/show_bug.cgi?id=182859
Summary
REGRESSION (r220112): reCAPTCHA images render off screen on Twitch.tv app Log...
alan
Reported
2018-02-15 21:28:06 PST
The web interface for logging in with the twitch app is unusable. The captcha they used to authenticate login renders offscreen and the button is cropped so you cannot click on it
https://itunes.apple.com/app/id460177396?mt=8
Attachments
patch
(9.60 KB, patch)
2018-04-23 15:27 PDT
,
Antti Koivisto
zalan
: review+
Details
Formatted Diff
Diff
patch
(10.16 KB, patch)
2018-04-23 15:58 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-02-15 21:28:39 PST
<
rdar://problem/37595065
>
alan
Comment 2
2018-02-15 21:35:11 PST
Need to figure out how Twitch.tv depends on frame flatting sizing and why puts the image offscreen when only the first (desktop size) size is reported. see
https://trac.webkit.org/changeset/220112/webkit
Radar WebKit Bug Importer
Comment 3
2018-02-15 21:35:35 PST
<
rdar://problem/37595129
>
Antti Koivisto
Comment 4
2018-04-23 15:25:59 PDT
***
Bug 184898
has been marked as a duplicate of this bug. ***
Antti Koivisto
Comment 5
2018-04-23 15:27:58 PDT
Created
attachment 338609
[details]
patch
Antti Koivisto
Comment 6
2018-04-23 15:58:13 PDT
Created
attachment 338612
[details]
patch
WebKit Commit Bot
Comment 7
2018-04-23 17:13:21 PDT
Comment on
attachment 338612
[details]
patch Clearing flags on attachment: 338612 Committed
r230933
: <
https://trac.webkit.org/changeset/230933
>
WebKit Commit Bot
Comment 8
2018-04-23 17:13:23 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 9
2018-04-26 21:34:20 PDT
I understand why we removed the fix if it’s no longer needed, but why remove the test?
Antti Koivisto
Comment 10
2018-04-27 03:27:34 PDT
The test is for specific behavior (to break media query listener/document mutation cycle) introduced in this patch. It is not obvious to me how to modify it and to keep it still useful.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug